# y-sweet

./: .dockerignore  .gitignore  LICENSE  README.md
crates/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build_python_alpine.sh  do  docker-compose.yaml  entrypoint.sh  fly.doc.toml  fly.staging.toml  fly.toml  run.sh  sdo  test_alpine_wheel.sh  test_presign.py  test_python_binding.py  webhook-test.md
crates/specs/: context-aware-url-generation.md  server-token-file-access.md
crates/y-sign/: Cargo.toml
crates/y-sign/src/: main.rs
crates/y-sweet/: Cargo.toml  build.rs
crates/y-sweet-core/: Cargo.toml
crates/y-sweet-core/src/: api_types.rs  auth.rs  doc_sync.rs  lib.rs  webhook.rs  webhook_metrics.rs
crates/y-sweet-core/src/store/: mod.rs  s3.rs
crates/y-sweet-worker/: Cargo.toml  wrangler.toml
crates/y-sweet-worker/src/: config.rs  durable_object.rs  lib.rs
crates/y-sweet/src/: cli.rs  lib.rs  main.rs  server.rs  webhook.rs
crates/y-sweet/src/stores/: filesystem.rs
openapi/: server.yml
python/: README.md  pyproject.toml
python/examples/: file_presign_example.py  y_sign_example.py
python/src/: test_webhook.py
python/src/y_sign/: README.md  __init__.py  error.py  token.py
python/tests/: server.py
python/tests/y_sign/: __init__.py  test_token.py
python/y-sign-py/: Cargo.toml  README.md  pyproject.toml  test_binding.py
python/y-sign-py/examples/: token_example.py
python/y-sign-py/python/y_sign/: __init__.py
python/y-sign-py/src/: lib.rs
tests/: README.md  test-with-minio.sh
tests/src/: index.test.ts
