[package]
name = "y-sign-py"
version = "0.8.1"
edition = "2021"
description = "Python bindings for y-sign token generation and verification"
license = "MIT"

[lib]
name = "y_sign_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
pyo3 = { version = "0.20.0", features = ["extension-module", "anyhow"] }
serde_json = "1.0.103"
y-sweet-core = { version = "0.8.1", path = "../../crates/y-sweet-core" }

[patch.crates-io]
rusty-s3 = { git = "https://github.com/dtkav/rusty-s3", branch = "main" }